feat: migrate in kubernetes
refactor: setup sops

fix: websockets by rewriting the path

feat: simple echo server for websockets

refactor: better parameterize helm and tofu

...with .gitignored files

configure tls for

disable mariadb and authentik temporarily

feat: TLS certificate works

feat: kubernetes dashboard

wip: edit all the default env vars

We have too many, these are often redundant!

docs: configure local DNS server

docs: README

wip: temporary set images names to my dockerhub

feat: first hand-written templates

feat: setup mariadb via helm chart

refactor: assign dockerhub image tags

feat: install authentik via Helm

feat: setup kubernetes cluster

refactor: split infrastructure/ in 2 deployments

refactor(docker): reduce production image size

Motivation
----------
Side quest of #1451. This will reduce the docker images sized for
`--target production`. Typescript should be a development dependency for
sure and `ts-node` is not used as the default `CMD` in the `Dockerfile`
but `node ./build/index.cjs`.

On our current production instance we install development dependencies
as well, so this shouldn't break anything there.

The `production` docker images are not used in a deployment as of now, but are
relevant for #1451.

How to test
-----------
In each subfolder:
1. `npm install --omit=dev`
2. `du -sh node_modules`
3. E.g. in `frontend/` it went from `321M` down to `194M`

refactor: no files for configuration only envs

It will be easier during deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,33 +14,43 @@ services:
       - db_vol:/var/lib/mysql
 
   presenter:
+    image: roschaefer/dreammall-presenter
     build:
       context: ./presenter
-      target: production
+      target: build
     ports:
       - 3001:3000
+    env_file:
+      presenter/.env
     environment:
       - NODE_ENV=production
 
   frontend:
+    image: roschaefer/dreammall-frontend
     build:
       context: ./frontend
-      target: production
+      target: build
     ports:
       - 3000:3000
+    env_file:
+      frontend/.env
     environment:
       - NODE_ENV=production
 
   admin:
+    image: roschaefer/dreammall-admin
     build:
       context: ./admin
-      target: production
+      target: build
     ports:
       - 3002:3000
+    env_file:
+      admin/.env
     environment:
       - NODE_ENV=production
 
   backend:
+    image: roschaefer/dreammall-backend
     build:
       context: ./backend
       target: production
