--- a/presenter/package.json
+++ b/presenter/package.json
@@ -76,6 +76,11 @@
     "vuetify": "^3.5.15"
   },
   "devDependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
+    "@types/compression": "^1.7.5",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.2",
     "@eslint-community/eslint-plugin-eslint-comments": "^4.3.0",
     "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
     "@pinia/testing": "^0.1.3",
