configure JWKS in helm chart

--- a/infrastructure/helm/dreammall/templates/backend-deployment.yaml
+++ b/infrastructure/helm/dreammall/templates/backend-deployment.yaml
@@ -32,6 +32,8 @@ spec:
               value: "https://app.{{ .Values.dreammall.domain }}/"
             - name: FRONTEND_INVITE_LINK_URL
               value: "https://app.{{ .Values.dreammall.domain }}/join-room"
+            - name: JWKS_URI
+              value: http:/{{ .Release.Name }}-authentik/application/o/dreammallearth/jwks/
               {{- range $key, $val := .Values.dreammall.backend.environment }}
             - name: {{ $key }}
               value: {{ $val | quote }}
