--- a/infrastructure/helm/dreammall/values.yaml
+++ b/infrastructure/helm/dreammall/values.yaml
@@ -10,7 +10,6 @@ dreammall:
 
   admin:
     envirnonment:
-      PUBLIC_ENV__META__BASE_URL: "https://app.dreammall.roschaefer.de"
       PUBLIC_ENV__META__DEFAULT_AUTHOR: "IT Team 4 Change"
       PUBLIC_ENV__META__DEFAULT_DESCRIPTION: "IT4C Frontend Boilerplate"
       PUBLIC_ENV__META__DEFAULT_TITLE: "IT4C"
@@ -37,6 +36,10 @@ dreammall:
 
 authentik:
   enabled: true
+
+  blueprints:
+    configMaps:
+      - authentik-blueprints-configmap
 
   server:
     ingress:
