various fixes/changes

--- a/infrastructure/helm/dreammall/secrets.yaml
+++ b/infrastructure/helm/dreammall/secrets.yaml
@@ -11,8 +11,13 @@ authentik:
     postgresql:
         auth:
             password: ENC[AES256_GCM,data:ya48QFblpT+lxoVzdB2/u3Ov86Q312tlp5DHdvdsn2GMEJc898ZtuO3LCbY9FXUcYxY=,iv:JvGY0PNEm0oF2WJhbqb+ZoujoNkbJ/dsf87dHrkRihE=,tag:bHR7DKhXxLe4hMkAc0ndbg==,type:str]
+    worker:
+        env:
+            - name: ENC[AES256_GCM,data:8OgmipTg534MKNHShcFmiVEeDuTpfnL3LeXg0g==,iv:NlZf/o61SiaWhFEJOW+P4zbPD5bD//6i919PZeVQEJo=,tag:gUjKMFWIhS8GMX6Ejl6wRA==,type:str]
+              value: ENC[AES256_GCM,data:g1//hspOujmn,iv:+xJgD+thyxl6pFAnF5RKGVvaIvzHj264cvEjH2aWPZ0=,tag:OhGoPTHi05hA2clzso0aSw==,type:str]
 mariadb:
     auth:
+        rootPassword: ENC[AES256_GCM,data:PvmNQMprdiZ9Jf9smbqtbNhvnr/cmPjgy+LaH1aTMo6ZTbAmz3/HLhTbVL9BOT3nasI=,iv:ThKxsDYSbCpS2tgYyz1fotvZ5Co5Flk5C4KKmHBoFS0=,tag:XWryVYe34LFqkowq1IpY3g==,type:str]
         password: ENC[AES256_GCM,data:AD4dIMQu+swrVckgFY+aG9th+67FhNmgz22OjC0FIJNJI3gFHdv2bYTOZHsuX1sVCUw=,iv:X58Kx5Dol1Xz1IEflRCh37ls0TFb8zjrQCsxrtaG4U4=,tag:SBqHACBLxCD3UrY72jFINA==,type:str]
 sops:
     kms: []
@@ -29,8 +34,8 @@ sops:
             Lzh3dC8wQ1AyR21DeStBZG5IQTVyR2cKGPYWRt7jG4+tWwooTE0lJUYWRyv2hIvX
             5Q80bA94hI/Un4wxlCLe9BNoY6t6cq+980i3607ySwm2YcJUriwwqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-21T23:34:26Z"
-    mac: ENC[AES256_GCM,data:3mPTaU/Xlfbc6zsG4eE0/Uu2dvteyQ0CfMXfzYWvwvNyVIlDPKZYoPC/ldxL0qJb4QDpiMgQUsgpncYjTDXiXtbqiIFp+sfqNEd4dd660KesVUyplj4wNdh5skvbwp0AJRLoyb6sCfpZoppC2jTNcC4f3nDiGa0dRliU+2UrXO0=,iv:UbwtX7EnLLHNHhSVHEizF7duZNmFpjZjtH71uvbfNns=,tag:v4WPmH0tM8RzQQn0ikHVHw==,type:str]
+    lastmodified: "2024-07-25T21:42:43Z"
+    mac: ENC[AES256_GCM,data:aHCHUFk5PQChi3DKAky5X4JGpIFvd8AY3z5M9XF1/HFAr/zoH84bWixiwckloDmLUHUe1LKFL0Y7Fdbr0ayARunpvUkbHBZ/nL8AYT6dFOv9o2mPgPpXYKsJ2c698yVpS1FTZkZhTWXpqbXKEPcYDdlTbJo3m7Wn1i+KaNTWVB4=,iv:Q/N+VnUg9dQsRMIOjQ5/fpm5kVlhkIuFa2i28scVwKE=,tag:eYZjicQg66YMFG6ImLJ9GQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.8.1
+    version: 3.9.0
