--- a/infrastructure/helm/dreammall/templates/backend-deployment.yaml
+++ b/infrastructure/helm/dreammall/templates/backend-deployment.yaml
@@ -33,7 +33,7 @@ spec:
             - name: FRONTEND_INVITE_LINK_URL
               value: "https://app.{{ .Values.dreammall.domain }}/join-room"
             - name: JWKS_URI
-              value: http:/{{ .Release.Name }}-authentik-server/application/o/dreammallearth/jwks/
+              value: http://{{ .Release.Name }}-authentik-server/application/o/dreammallearth/jwks/
               {{- range $key, $val := .Values.dreammall.backend.environment }}
             - name: {{ $key }}
               value: {{ $val | quote }}
