secrets array will overwrite all values

--- a/infrastructure/helm/dreammall/secrets.yaml
+++ b/infrastructure/helm/dreammall/secrets.yaml
@@ -13,6 +13,8 @@ authentik:
             password: ENC[AES256_GCM,data:ya48QFblpT+lxoVzdB2/u3Ov86Q312tlp5DHdvdsn2GMEJc898ZtuO3LCbY9FXUcYxY=,iv:JvGY0PNEm0oF2WJhbqb+ZoujoNkbJ/dsf87dHrkRihE=,tag:bHR7DKhXxLe4hMkAc0ndbg==,type:str]
     worker:
         env:
+            - name: ENC[AES256_GCM,data:KPh/FWLQLHqP1FC0FNoSiSbLMIX4mA==,iv:ERojEi1gVRxlCBuECawCY1DnhrgVpFjitXKSNC+v71A=,tag:7W1vKCrUfHfKxa0v9k2PfA==,type:str]
+              value: ENC[AES256_GCM,data:wneW21gKlZW47MJmqKaiBqE4RSD4B3T6Uqm5SBE/nU4x32c=,iv:bppMAvC5YtrzgNPZ5a18oUfMbI91Y0s6jj7HkZFSNDI=,tag:09iJPY6A56egE0/+wJEpmQ==,type:str]
             - name: ENC[AES256_GCM,data:8OgmipTg534MKNHShcFmiVEeDuTpfnL3LeXg0g==,iv:NlZf/o61SiaWhFEJOW+P4zbPD5bD//6i919PZeVQEJo=,tag:gUjKMFWIhS8GMX6Ejl6wRA==,type:str]
               value: ENC[AES256_GCM,data:g1//hspOujmn,iv:+xJgD+thyxl6pFAnF5RKGVvaIvzHj264cvEjH2aWPZ0=,tag:OhGoPTHi05hA2clzso0aSw==,type:str]
 mariadb:
@@ -34,8 +36,8 @@ sops:
             Lzh3dC8wQ1AyR21DeStBZG5IQTVyR2cKGPYWRt7jG4+tWwooTE0lJUYWRyv2hIvX
             5Q80bA94hI/Un4wxlCLe9BNoY6t6cq+980i3607ySwm2YcJUriwwqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-25T21:42:43Z"
-    mac: ENC[AES256_GCM,data:aHCHUFk5PQChi3DKAky5X4JGpIFvd8AY3z5M9XF1/HFAr/zoH84bWixiwckloDmLUHUe1LKFL0Y7Fdbr0ayARunpvUkbHBZ/nL8AYT6dFOv9o2mPgPpXYKsJ2c698yVpS1FTZkZhTWXpqbXKEPcYDdlTbJo3m7Wn1i+KaNTWVB4=,iv:Q/N+VnUg9dQsRMIOjQ5/fpm5kVlhkIuFa2i28scVwKE=,tag:eYZjicQg66YMFG6ImLJ9GQ==,type:str]
+    lastmodified: "2024-07-25T22:36:04Z"
+    mac: ENC[AES256_GCM,data:v3H5TM/EPBJdBV1EZBx8/Di+JCCfFQgb87+s1QyafZXlcNQFOBHxMaTzbWOh+VBltMTC0f1sYhbp14FEKBzNvfPEpfeRPRuCbEWSUAjhqRmqi/1eN/BNv4mY4MbjUN3lMwEc2NtLdw8hVV0MaZyazGCmXk7vM/7wsAjufHKqQbg=,iv:eWv/ddBMXFmm+50ZCkf2GSK0wBFO/dL3HEMWe/o55RI=,tag:TGzSNbt75hl4i6ITOxqnAA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.0
