add DREAMMALL_PRESENTER_URL env var

--- a/infrastructure/helm/dreammall/secrets.yaml
+++ b/infrastructure/helm/dreammall/secrets.yaml
@@ -15,6 +15,8 @@ authentik:
         env:
             - name: ENC[AES256_GCM,data:KPh/FWLQLHqP1FC0FNoSiSbLMIX4mA==,iv:ERojEi1gVRxlCBuECawCY1DnhrgVpFjitXKSNC+v71A=,tag:7W1vKCrUfHfKxa0v9k2PfA==,type:str]
               value: ENC[AES256_GCM,data:wneW21gKlZW47MJmqKaiBqE4RSD4B3T6Uqm5SBE/nU4x32c=,iv:bppMAvC5YtrzgNPZ5a18oUfMbI91Y0s6jj7HkZFSNDI=,tag:09iJPY6A56egE0/+wJEpmQ==,type:str]
+            - name: ENC[AES256_GCM,data:lV8LfQlLMzXtP9i6AbfOw7Y9WLsW7PQ=,iv:h4XJUW6dpHGoIApgjyzgNetwPgVRaCpBUCPe+N8Xjeo=,tag:+qY1CZooVM0H7ZjC8MdTiQ==,type:str]
+              value: ENC[AES256_GCM,data:85/ik7Vh16bZoNyWYUST/Am9sXzacr9CW6HZP0wLkg==,iv:dK3mo1blna8jwFM4iSTLNOJids/NJeiqoGQvMqec14k=,tag:cavQIZRjMBIxJxXl2nHkwg==,type:str]
             - name: ENC[AES256_GCM,data:8OgmipTg534MKNHShcFmiVEeDuTpfnL3LeXg0g==,iv:NlZf/o61SiaWhFEJOW+P4zbPD5bD//6i919PZeVQEJo=,tag:gUjKMFWIhS8GMX6Ejl6wRA==,type:str]
               value: ENC[AES256_GCM,data:g1//hspOujmn,iv:+xJgD+thyxl6pFAnF5RKGVvaIvzHj264cvEjH2aWPZ0=,tag:OhGoPTHi05hA2clzso0aSw==,type:str]
 mariadb:
@@ -36,8 +38,8 @@ sops:
             Lzh3dC8wQ1AyR21DeStBZG5IQTVyR2cKGPYWRt7jG4+tWwooTE0lJUYWRyv2hIvX
             5Q80bA94hI/Un4wxlCLe9BNoY6t6cq+980i3607ySwm2YcJUriwwqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-25T22:36:04Z"
-    mac: ENC[AES256_GCM,data:v3H5TM/EPBJdBV1EZBx8/Di+JCCfFQgb87+s1QyafZXlcNQFOBHxMaTzbWOh+VBltMTC0f1sYhbp14FEKBzNvfPEpfeRPRuCbEWSUAjhqRmqi/1eN/BNv4mY4MbjUN3lMwEc2NtLdw8hVV0MaZyazGCmXk7vM/7wsAjufHKqQbg=,iv:eWv/ddBMXFmm+50ZCkf2GSK0wBFO/dL3HEMWe/o55RI=,tag:TGzSNbt75hl4i6ITOxqnAA==,type:str]
+    lastmodified: "2024-07-26T19:28:02Z"
+    mac: ENC[AES256_GCM,data:na3Xz4NzJvTtlA3r+4mnzRVu8J8C5DT5DOyAgO+FMPqCoeoDoiptjMPjWVGgCJ2xmiVlA+F2RB36Ax4Yo9y/BcPRNQ9PMOcEeE3riKwf+FWR8e+JXX5Ctc0zL9scZuZgB4TLrD+HkVE1Khh+iu2leaYINUvxEdXCZLGdBZWQ6AM=,iv:qjATqLccRamt50ZRKQ01+dwtvvucRa6PNvOA/xMf+8g=,tag:f/ITW0tzvOsJo1q6TLJC2g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.0
