fixup authentik dockerfile

--- a/infrastructure/helm/dreammall/values.yaml
+++ b/infrastructure/helm/dreammall/values.yaml
@@ -35,6 +35,9 @@ dreammall:
       BBB_URL:
 
 authentik:
+  global:
+    image:
+      repository: roschaefer/dreammall-authentik
   enabled: true
 
   blueprints:
