refactor(deployment): be able to repull the image
.. when I delete the pod

--- a/infrastructure/helm/dreammall/values.yaml
+++ b/infrastructure/helm/dreammall/values.yaml
@@ -38,6 +38,7 @@ authentik:
   global:
     image:
       repository: roschaefer/dreammall-authentik
+      pullPolicy: Always
   enabled: true
 
   blueprints:
