refactor: provide name for acme issuer

--- a/infrastructure/helm/dreammall/secrets.yaml
+++ b/infrastructure/helm/dreammall/secrets.yaml
@@ -1,3 +1,5 @@
+acme:
+    email: ENC[AES256_GCM,data:3HlBTbXccvsXEUp9yrMvKVFIPQHtvbks0eHwAA==,iv:/ExydZvQ9IzqeeTXfXWbN06FTcIoqYwx/MHqaj8sqU8=,tag:0tXDNR0rM0YcTGTS1P6q7A==,type:str]
 dreammall:
     backend:
         environment:
@@ -38,8 +40,8 @@ sops:
             Lzh3dC8wQ1AyR21DeStBZG5IQTVyR2cKGPYWRt7jG4+tWwooTE0lJUYWRyv2hIvX
             5Q80bA94hI/Un4wxlCLe9BNoY6t6cq+980i3607ySwm2YcJUriwwqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-26T23:50:50Z"
-    mac: ENC[AES256_GCM,data:6pGwbhcv0FSGfyhZEzY17npaoBvMGEXiU+Cd5zK4N65bPwTjz/Era7jAti9IzxPck13gHMINKk69W7pCZbAmjWq9AvhdLQ+Ac3/PaCVpsVQNxzOjDoyM3P3fpLv9BiCCZ8xpgnpFXlbTkBfx2reiuQnqrGwy4qIa/wpn8mOMr9U=,iv:7eaOnhY9F0EUfdl3fy/8CgzjakQE6LFfpVsRNXCA8v8=,tag:KNReQF4z3sp6VlNY/w9Hig==,type:str]
+    lastmodified: "2024-07-27T16:43:34Z"
+    mac: ENC[AES256_GCM,data:ZQe34RVjpYBx8qzfs9dg6UYLs7LR1rF2Acks5MA67njJfFc20X0HJLFjTjAS6cLOKqQWQN8BQJrVdqNye6JfZy56HgTrkYOBx42pJMtn+b1XB84xSjxc1jEu4/QXwvdvA3A7REkvzSBbicMFN4PH2n5QhFE4+qdTvczMsKC5wEQ=,iv:Ec9XdepsxXq+48tufrOK1+7rvgYVlBv6jve2A6GLHAQ=,tag:ljtS3vKImY6bz/hybrxllQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.0
