--- a/infrastructure/helm/dreammall/templates/acme-issuer.yaml
+++ b/infrastructure/helm/dreammall/templates/acme-issuer.yaml
@@ -8,7 +8,7 @@ spec:
     # The ACME server URL
     server: https://acme-staging-v02.api.letsencrypt.org/directory
     # Email address used for ACME registration
-    email: {{ .Values.email }}
+    email: {{ .Values.acme.email }}
     # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
       name: letsencrypt-staging
@@ -28,7 +28,7 @@ spec:
     # The ACME server URL
     server: https://acme-v02.api.letsencrypt.org/directory
     # Email address used for ACME registration
-    email: {{ .Values.email }}
+    email: {{ .Values.acme.email }}
     # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
       name: letsencrypt-prod
