--- a/infrastructure/helm/dreammall/templates/ingress.yaml
+++ b/infrastructure/helm/dreammall/templates/ingress.yaml
@@ -1,8 +1,10 @@
 ---
+{{- if .Values.ingress.enabled -}}
+{{- $fullName := include "dreammall.fullname" . -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: dreammall-ingress
+  name: {{ $fullName }}
   annotations:
     cert-manager.io/issuer: {{ index .Values.dreammall.ingress.annotations "cert-manager.io/issuer" | quote }}
 spec:
@@ -88,3 +90,4 @@ spec:
             name: backend
             port:
               number: 4000
+{{- end }}
