--- a/infrastructure/helm/dreammall/templates/ingress.yaml
+++ b/infrastructure/helm/dreammall/templates/ingress.yaml
@@ -1,6 +1,6 @@
----
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "dreammall.fullname" . -}}
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -75,7 +75,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: dreammall-ingress-paths
+  name: {{ printf "%s-paths" $fullName }}
   annotations:
     traefik.ingress.kubernetes.io/router.middlewares: "{{ .Release.Namespace }}-stripprefix@kubernetescrd"
 spec:
