--- a/backend/package.json
+++ b/backend/package.json
@@ -32,7 +32,7 @@
     "@getbrevo/brevo": "^2.2.0",
     "@graphql-tools/schema": "^10.0.4",
     "@graphql-yoga/subscription": "^5.0.1",
-    "@prisma/client": "^5.17.0",
+    "@prisma/client": "^5.16.1",
     "@types/express": "^4.17.21",
     "axios": "^1.7.2",
     "class-validator": "^0.14.1",
@@ -43,25 +43,26 @@
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.23.0",
     "graphql-ws": "^5.16.0",
-    "graphql-yoga": "^5.6.1",
-    "jose": "^5.6.3",
-    "prisma": "^5.17.0",
+    "graphql-yoga": "^5.4.0",
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.16.1",
     "prisma-extension-soft-delete": "^1.0.1",
     "reflect-metadata": "^0.2.2",
     "tsconfig-paths": "^4.2.0",
     "tslog": "^4.9.3",
-    "type-graphql": "^2.0.0-rc.2",
+    "type-graphql": "^2.0.0-rc.1",
     "uuid": "^10.0.0",
-    "ws": "^8.18.0"
+    "ws": "^8.17.1"
   },
   "devDependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.3.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.12",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.14.9",
     "@types/uuid": "^10.0.0",
-    "@types/ws": "^8.5.11",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "eslint": "^8.57.0",
@@ -80,11 +81,11 @@
     "graphql-tag": "^2.12.6",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
-    "prettier": "^3.3.3",
-    "ts-jest": "^29.2.3",
+    "prettier": "^3.3.2",
+    "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.2.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.2"
   },
   "imports": {
     "#api/*": "./src/api/*",
