--- a/presenter/package.json
+++ b/presenter/package.json
@@ -119,7 +119,7 @@
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass": "^1.77.8",
+    "sass": "1.74.1",
     "sass-loader": "^15.0.0",
     "storybook": "^8.1.9",
     "stylelint": "^16.7.0",
