--- a/infrastructure/helm/dreammall/templates/frontend-deployment.yaml
+++ b/infrastructure/helm/dreammall/templates/frontend-deployment.yaml
@@ -47,8 +47,8 @@ spec:
             - name: {{ $key }}
               value: {{ $val | quote }}
               {{- end }}
-          image: roschaefer/dreammall-frontend
-          imagePullPolicy: Always
+          image: "{{ .Values.dreammall.frontend.image.repository }}:{{ .Values.global.image.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.global.image.pullPolicy }}
           name: frontend
           ports:
             - containerPort: 3000
