feat(docker): bake env vars into docker image
Motivation
----------
This is a workaround for #1504.

There is no (clean) way to accommplish runtime environment variables for
our frontends. I bake them into the docker image for now. Not great, but
gets things going.

How to test
-----------
1. `docker pull ghcr.io/dreammall-earth/dreammall.earth/presenter:master`
2. Signup/Signin buttons point to the hard-coded domain

--- a/.github/workflows/e2e.run.tests.yml
+++ b/.github/workflows/e2e.run.tests.yml
@@ -24,10 +24,12 @@ jobs:
           npm run start &
           cd ../frontend
           cp .env.dist .env
+          rm .env.production
           npm install
           npm run prod &
           cd  ../presenter
           cp .env.dist .env
+          rm .env.production
           export PORT=3001
           npm install
           npm run prod &
