feat(docker): ship own authentik image
Motivation
----------
We made a number of customization. To deploy these to kubernetes, we
need to build our own docker image and pull it from the cluster.

Having this `Dockerfile` has another advantage: We can get dependency
updates with
[dependabot](https://docs.github.com/en/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file?learn=dependency_version_updates&learnProduct=code-security#docker)

How to test
-----------
1. After merge, we will see a new repository in our packages

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,7 +11,7 @@ jobs:
   build-and-push-image:
     strategy:
       matrix:
-        folder: [admin, backend, frontend, presenter]
+        folder: [authentik, admin, backend, frontend, presenter]
     runs-on: ubuntu-latest
     env:
       IMAGE_NAME: ${{ github.repository }}/${{ matrix.folder }}
