refactor(docker): add image tags to docker-compose
Motivation
----------
Now that we're shipping our own docker images. It makes sense to add
image tags to build them with the right tag as well as be able to:
```
docker compose pull
```

How to test
-----------
1. `docker compose build`
2. `docker images` shows sth. like this:
```
REPOSITORY                                          TAG           IMAGE ID       CREATED              SIZE
ghcr.io/dreammall-earth/dreammall.earth/authentik   latest        2fb9b4dcf84c   About a minute ago   1.06GB
ghcr.io/dreammall-earth/dreammall.earth/admin       latest        9af3932c4d98   43 minutes ago       141MB
ghcr.io/dreammall-earth/dreammall.earth/presenter   latest        971f8a1dfe3f   43 minutes ago       141MB
ghcr.io/dreammall-earth/dreammall.earth/backend     latest        d0fd7f4644bb   43 minutes ago       141MB
```

--- a/authentik/docker-compose.yml
+++ b/authentik/docker-compose.yml
@@ -40,6 +40,7 @@ services:
       - redis:/data
 
   authentik:
+    image: ghcr.io/dreammall-earth/dreammall.earth/authentik:latest
     build:
       context: .
       target: production
@@ -59,6 +60,7 @@ services:
       - redis
 
   authentik-worker:
+    image: ghcr.io/dreammall-earth/dreammall.earth/authentik:latest
     build:
       context: .
       target: production
