--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - db_vol:/var/lib/mysql
 
   presenter:
+    image: ghcr.io/dreammall-earth/dreammall.earth/presenter:latest
     build:
       context: ./presenter
       target: production
@@ -23,6 +24,7 @@ services:
       - NODE_ENV=production
 
   frontend:
+    image: ghcr.io/dreammall-earth/dreammall.earth/frontend:latest
     build:
       context: ./frontend
       target: production
@@ -32,6 +34,7 @@ services:
       - NODE_ENV=production
 
   admin:
+    image: ghcr.io/dreammall-earth/dreammall.earth/admin:latest
     build:
       context: ./admin
       target: production
@@ -41,6 +44,7 @@ services:
       - NODE_ENV=production
 
   backend:
+    image: ghcr.io/dreammall-earth/dreammall.earth/backend:latest
     build:
       context: ./backend
       target: production
