feat(workflow): automatic deployments
Motivation
----------
This will deploy `master` to `master.git.dreammall.earth` on every
`push` event.

How to test
-----------
1. Merge this PR.
2. Checkout https://master.git.dreammall.earth/

Commits:
* fix: re-encrypt for github
* place SOPS_KEY in file
* add hint for the owner of the master key

--- a/infrastructure/helmfile/secrets/mariadb.yaml
+++ b/infrastructure/helmfile/secrets/mariadb.yaml
@@ -9,41 +9,50 @@ sops:
     azure_kv: []
     hc_vault: []
     age:
+        - recipient: age1al36hkk8can83zpxq8qyy07gpv83hdw9vchfly5f264kanz405as283a00
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOeDg3NXEvclRzcEQ2Ylhl
+            SHJ2NThZaE4rL1BJY2E4Y0NZRXhRK21meEhvCmp0VTMrKzBva1BaSXlTOVQxdHZv
+            RHpXVTJuNElYSC8rME9oMzJzR0pJTWsKLS0tIGV6OTRka3E2WDV4alNVUnc2R2l4
+            N0JRTWpKVU96NlBsNEx3ekp2amlsTHMKc1SaFce1oN7wWH0ckEaE64cSQ9Lg6BLT
+            XVcM9ItcJpbnFQvdAqQHTcCsuDAVub5GUxCZb7bc2Y3HGZtL9UB8gA==
+            -----END AGE ENCRYPTED FILE-----
         - recipient: age1llp6k66265q3rzqemxpnq0x3562u20989vcjf65fl9s3hjhgcscq6mhnjw
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIMUtjTUcxS2pZSStLUDJ5
-            eUFuWUsyb2NGNlRNanRsZHU2QlVoZU9wYmdRCkRPUjZBVjJnSG1SeFpXUFJQaVFv
-            UVRQajJWVkRjRE0rMHZVY0xPTDBWWkEKLS0tIHdBakFFZVJFQ2hhT2NOMW1sL2FT
-            R0Z6MkU5MlZuMTBzb1lDUW1ja01oYW8KCWSEiN5E0Sy8AHZKcGgoJFsexrwWoOkh
-            PLRF/VrvORsTpbxDY57jtHiTSUZs3wnlaL0p4sq42bVHQjQBQocJog==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWcEx3NENIT3V2WGJDRHE4
+            MXdPb0FDQTFuaG11REVzQnNTdkR2K3k1SWtFCnZpR3dmemR1QTcrSlBiUEk3MHhp
+            aVVwOFJaaTVYZ0J0OHdHWTAyMURrS1kKLS0tIEltL1pDeE1tRE5BYUJMVGhtSkF1
+            QU8rR2hLNWp1cEJURkd0SVlrcXRLMWMKt4xaOzgbyJO1c62Ej3dZz4Tm91RpFN7w
+            E+euprtsqJvV/xjHL8WqMjtloyrm7YtRSmN8+iUfHYiUocadI0yV4A==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1zycwtk6dkxj6vuqhj9jw7932ythky9p3att6df4z9qasyw8v5dxquejcmp
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrUXVCRzdOUXZYNEJFTGZi
-            bDR1YnpzN016Y09leTZLc2pUWnFoWUtHNEZVCkxmdkxNOTlvT082dThmdXpQYm1I
-            eU1jSk50TzVlVDc2QnpKVXBpWVQ0ZUUKLS0tIDdoVmJIK3M0bWpQVHMrUkg1Mytv
-            bWtadGVwc1EyQy9nYzNXaVZIVzIydzgKkl5gyny+PdxHRrux6X3FEaggwhaWOpQp
-            TJkK74PTk5K28Ab0caBBOGgamdPdm/YoRNlBks66MUSXJHLJa5tqag==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiNnh1WDZReWlRQ2E2R3hU
+            eDJXKzFIU21qdVNPcHJIQlppUEI0WjlsOGlJClhDZlNnbG5hbUU0YjBMUWVmaVVu
+            REtMK0JsMU9qYjNZSXBFc0Qyc3gwM2sKLS0tIGZhZHMzNmVmREJJWVhQTnd2Y1Nj
+            RVlqUzZTbmxHY05nc0d1OW5pUFJ6K28K/Z6kZftthvUxvhBRzQDQI1f5DTBWSZv7
+            haG7D4zPb5U7DHasatpVxtrDvgMGha1Yu6IW0LFIZimHsM75JGC2Eg==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1t0ufylv5xfwhmcamu4gpwtay4wcuyqgzlkht4t04s9qjl8xjks9skxrt02
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDODRSUDVtR0tnWEZwWlV4
-            bEpBeUtUNzBtNDduSGpiM0Rvek9nY3BLY3lZCmZuSTZTZ0R2OFdSWUNobHBDanBw
-            aHkrcVJtdTZ0RDBubStwSVYyOWlrbncKLS0tIG90Nld3cFJJTHFjOXhDRHVrTzg5
-            cCtYU1M4OXdmUE1YckVMUkFMem1jaGcKjxhAG+olqHI/cv54h1nyHCrxvipSLpN6
-            GguqxF7H6drZpA/0+uZBLsdVFVqJQIveB3C/HOiP2RmkJkRgMwPB6g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTZ21MQWt3N2wwVXF5VHBR
+            QkJHRndLWDUyWHBSZ3dZZ3FoV3dFbTVzZ0NJClp3OGdESzkyZ1RMdlBjNlhOVVJr
+            dU9TVjZiQjI5UkE5clFsVWdkM24ycW8KLS0tIDJpOGRuOENaOXg5UVIramtSVEox
+            alpHZzBZcCtSWEFjdmJia2VOZFlTOWsK3dEie8whyl9RFC35NvjeFwwL8TlG7koY
+            6/S6vuLRUAkZetjmNAmpAGjf8srT2oL4fanbxTk69Xeek147RJMM2w==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age15g5mhkcrseuxq923j7vdnmrzq4eh08ujha864k8hc6ncrj5sqfcsqkkyr2
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoL3RydFFqZjFrSE1scmZl
-            TkxMMXU5Zm9PclIyRXFqem1FNDcydjRmeHlNCmk0WDArSDB3Qml4SVVCWHlqN09W
-            S1NwYzlzL2ZUcEtCdjZWZyt2M0NybHcKLS0tIDNFOUVINTlnNDdJcFpxYlZiUE43
-            azdCNG83N3NGa29YcGNpSlpmbnBBVVUKY2EKJIUOojT5/4OzGA5otsvDohFvy5Nn
-            /hf1LEIKTZ1OHef6VTC7rS53ygLkcSxCHm8zKwfIVCPfNgP2r6jQ8g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlQUh3Rm84azYrejg1dTg2
+            SzZ4bVZNS3lWTXlTbkpBeFV0SHdVVzlOaWw4Ci9GcmIzbVlwb05DOTlTWWhvbEVY
+            bXhXR29XcTVjcDgxYS9Td3h6QnBCbHMKLS0tIGN4NmtnTnRqYVFmUTNWQzlISTVa
+            eDc0aE4wcS9RelJ0cDNiOGdBN29pdWcKB7eirEcc0T75/xJs/kXsM8fXI+wo/ho4
+            df2w1K5gTiEgxQMqZWBBsXTnF1v7xKU6EFw1BOFi0AKULDE9KC+R+g==
             -----END AGE ENCRYPTED FILE-----
     lastmodified: "2024-08-01T15:19:54Z"
     mac: ENC[AES256_GCM,data:JXQidrSRvs2ZjVj79CiSSoscU4Xx1/GhfIC4WGz8uGmmAiUi2chD+MoafpGFJSlJoLeU05lbwkMnpYRkyeNhTKelyEAOxlewCFb3ysUbStHSrvNXPM0hEddoxYA6B3pciwiL8yH3PaiVhxIyRd7XQAPTdKcqyRVisZjoxI0O0Bs=,iv:m6X4veK/d/DypXVwNBDbx5Ce8fdc36Ew2eoWhfh20AI=,tag:RkA2FKxNiz8qjaX8h30meg==,type:str]
