--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,19 +1,17 @@
-name: Create and publish Docker images
+name: Deployment
 
 on:
   push:
     branches: ['master']
 
-env:
-  REGISTRY: ghcr.io
-
 jobs:
-  build-and-push-image:
+  build-and-push-images:
     strategy:
       matrix:
         folder: [authentik, admin, backend, frontend, presenter]
     runs-on: ubuntu-latest
     env:
+      REGISTRY: ghcr.io
       IMAGE_NAME: ${{ github.repository }}/${{ matrix.folder }}
     permissions:
       contents: read
@@ -43,7 +41,7 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
             type=sha
-      - name: Build and push Docker image
+      - name: Build and push Docker images
         id: push
         uses: docker/build-push-action@a8d35412fb758de9162fd63e3fa3f0942bdedb4d
         with:
@@ -62,5 +60,28 @@ jobs:
       #     subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
       #     subject-digest: ${{ steps.push.outputs.digest }}
       #     push-to-registry: true
+
+  deploy-to-kubernetes:
+    runs-on: ubuntu-latest
+    needs: build-and-push-images
+    steps:
+      - uses: mdgreenwald/mozilla-sops-action@d9714e521cbaecdae64a89d2fdd576dd2aa97056 # v1.6.0
+      - uses: actions/checkout@9a9194f87191a7e9055e3e9b95b8cfb13023bb08 # v4.1.7
+      - run: |
+          mkdir -p ~/.config/sops/age
+          echo $SOPS_KEY | base64 --decode > ~/.config/sops/age/keys.txt
+        env:
+          SOPS_KEY: ${{ secrets.SOPS_KEY }}
+      - run: |
+          mkdir -p ~/.kube
+          sops decrypt ./infrastructure/helmfile/secrets/kubeconfig > ~/.kube/config
+      - run: echo "IMAGE_TAG=sha-$(echo $GITHUB_SHA | cut -c 1-7)" >> $GITHUB_ENV
+      - uses: helmfile/helmfile-action@314e6f498c8fb72ae64ed6f526e992a6a9a90e32 #v1.9.1
+        with:
+          helmfile-args: apply --environment master
+          helmfile-workdirectory: ./infrastructure/helmfile
+          helm-plugins: >
+            https://github.com/databus23/helm-diff,
+            https://github.com/jkroepke/helm-secrets
 
 
