--- a/infrastructure/helmfile/secrets/authentik.yaml
+++ b/infrastructure/helmfile/secrets/authentik.yaml
@@ -11,41 +11,50 @@ sops:
     azure_kv: []
     hc_vault: []
     age:
+        - recipient: age1al36hkk8can83zpxq8qyy07gpv83hdw9vchfly5f264kanz405as283a00
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpSlFnbTlKY1BuR1lKTEd4
+            VDJqZ0lyQnp5c2FIN2doMWJFK2k4NU8vMVc4ClBNZVM0c05ZaVZOU0pXY0FleWlV
+            Z0xwa1I0V0t0MU5jeVo1YUViMi9aOUkKLS0tIGwyM01TeDhXVUF3dWFTdGdIWG5I
+            Qm5yR2lkKzI0NDh1T1hSZGVlWVpKMnMKgQEs8gRSZ6Q31GNy6f+3v3CkeLUBjdLf
+            V7vKOUV8h8Mx9qb+6WSdE1uMMOioeubPLpijNECyKGAnI5+CIA/Gyg==
+            -----END AGE ENCRYPTED FILE-----
         - recipient: age1llp6k66265q3rzqemxpnq0x3562u20989vcjf65fl9s3hjhgcscq6mhnjw
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhQ3JUSnNuSStJeFB0YmlP
-            dFlqdlFqMTA3bW1PM1J0VHRtTjQ1bzhsRUJNClQveWdrZjVDbXU2Tkp1MDRqK01p
-            TDdyMjUzMHhLZEZXazBxUktzMHRRUU0KLS0tIFRlSWxRVnkwbmxtbUFmOUtaZHlo
-            TnBpM2IxMitPRmd2UFIvSkx5WVlSOW8K/a9Sjk76gRQjWx3XDpy+tBpiPTo34CQ/
-            TbqJ4RLIGt0qusVRfFEJNpIeA58ZOXOJO/5gN8LaC9CaPCRav7HluA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKTzhna2FGc0M1MU9pMktx
+            VlVybkJ3RWxTckc2a3VPT1VoekdUempiTnc0CitPZ2lPTWxzRlRhTnhqMzVVZ1Mr
+            WmU4VU9EVGU0WHBiUjZ4VzN3ZEV5dncKLS0tIHJqYndhbko1VmNvVVJFZEowZElh
+            STV3cGpraE9GWnZiOGFOdk9PNkJnZk0Kw5nBO5ZGHGoLexCXrfimrZe+tCtkRGNm
+            JUWR2sgHwaMOCkDWHg8Fsl58yLvyKFCSxN4S7lS8q3pM093QhGc45A==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1zycwtk6dkxj6vuqhj9jw7932ythky9p3att6df4z9qasyw8v5dxquejcmp
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpRUhUY1NoN1BKelhjWkVZ
-            MjFwa0RJSDhueXdWb0ZodGJlN1pLVWEzUkNnCmRWVHpzTXBhclZ6bzlTVjFjMmtC
-            TjRmN2VlQWwzUEFoc1lvZExyaUtWV0EKLS0tIFNlZ1VXdjRBL2R4Mzl3dG9kanRJ
-            cXRneXZNTUw3c1VIbWh4dzBiQ29yNlUKsSH46XI4hBwGeDI3y5ppmHZ0TDMXQN9l
-            qgGSBAEnUBDdp7Ts29epVK21IxcoS8TPw/cqiBKkpJLOW70xsrqgqQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkdmN4OE5GRHlSUTlsM1Bt
+            L3UvZE5pSGpuVXhic003Sy9iaWVhK2JsYXpvClo0SE4reUNFQkVuMzNtcTRlcm1O
+            bnQyMGNTSGxrcUNoMDAxQWdCaXk1aEEKLS0tIHA5YnZVZzZid0w1a3JHVVZObVFn
+            SUJHMXdyaXRpUGd2Mzl4WW54Y3ZNSE0K/TRGo1WpqlyYAgc4clGu53VvTZ9XEl6T
+            hbkK82DrORSBwAY+poVcY8RwyMenobkzoP8YLx9SgM4PBjuqiwdBog==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1t0ufylv5xfwhmcamu4gpwtay4wcuyqgzlkht4t04s9qjl8xjks9skxrt02
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNNU95NWo0c3J5dERxeDBr
-            VHVFYTlwc3c0djkrUnV2UHVncFhCN0l4QlRNCmRsUUxxeXBWTFBtZ0l4RDlERDZ6
-            VjM0VlgvU3VBdFRaNEZ2SGxzRkZSS0kKLS0tIFA0VlF4dXBuVkMzNFFnbTZ3dTdw
-            TVFkYTBrTnVXMStFUGdsWDg4TFFYTkkKb++bZi23t/AzvGi2YexbdffXFCPdAOs0
-            B/Pk0w0luvGGRP91MyjLf0CGhRchpb3j70rgEIh98uhBjr8JQvrOYg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSbFAyai9LakhhMU5KRm9z
+            MitLT3BZZ292Mno1N0JZV3IxeGo5dGlSVXdRCi9WQUtaSzBwS01lbHUrVStLbzhG
+            em9BYTgyaUZZbkFmT3lOWWl0QldIWXcKLS0tIGJxeHFGMExDVUFEcXlxZ1BaNXlG
+            YnRLOFNHOE1VMmh0ajhVcCttYjhsaDAKq5ewySrz/xh7ZiPrC6PUWP1LA/uPBgvv
+            LoGlAiUdevheZtq34qZrz0USm2cZZsJoCCpnm9GF2NkN3qKvILvK8w==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age15g5mhkcrseuxq923j7vdnmrzq4eh08ujha864k8hc6ncrj5sqfcsqkkyr2
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPaWRyZ2ltbFlFWklWRGMx
-            SmtpN1BxeWVaUVdudEtBdzZkajY5SnJTRHdnCm1aNHpHQXJVYUIwNEljQ1IvN2lh
-            QlM3MGJlRnVKTWM3WmxWL0pxc3hRZVUKLS0tIDRoQk42S1pUUVN2cGFKbTRMNzFt
-            Z1hzTEhVVk1VRitNWlpaM1hKcW9hSkUKu+oF64DUww/lDNGfj/bDZUFhPD0jLHJO
-            TfWX11SdzClpYAlRiYuyCGuddV9D0l8WmrAQVJwUCLk2WHOcptqYnw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnK3llVk9mSlRDQm1NcUxS
+            Vm5NUDJGc3JQZ0xQQ241Zm93a1FkU0pUZ1ZrClRRS1ZwR2tBNU9QS0UvNkhXSzFy
+            NUJSWHJRRXh1Y1JTMTcxVDE2TWliT3MKLS0tIFpiNUlpakJXUGE1bHY4OHlXeEhm
+            ZjN4NjZTUzhNMFNEcUdLTWo3L2ZlSmMKVGj7BYJ0ExYdfkdVPY0sSgrj1sRihFs1
+            rMK1f7vXHigdlNS6KfM/VU0IfLhc+/pbZ66OHbmtqhRCxBx32b+nCQ==
             -----END AGE ENCRYPTED FILE-----
     lastmodified: "2024-08-01T14:36:33Z"
     mac: ENC[AES256_GCM,data:2UiO3pJoQITr1Ga6cofEuTIbu1VYe5oS22i1CQVUaNuK6f3PDe3nGr50PTbu/q50Aj65ggLhkOjcsUZj+QiBE2dLX5I7JdOqzrXspDCmr/khUudaqep7DCHET+Ah7Xp1tzZGacZUONDL4wnLFynuPlKbt/P7OEqQn1W5szTu/vU=,iv:0VuKhtrksor0BA4aMkaVL/yGyN9MMAnMAdBC7B862pI=,tag:DYdQfkW/ocB44a+lSAor8w==,type:str]
