--- a/infrastructure/helmfile/secrets/dreammall.yaml
+++ b/infrastructure/helmfile/secrets/dreammall.yaml
@@ -14,41 +14,50 @@ sops:
     azure_kv: []
     hc_vault: []
     age:
+        - recipient: age1al36hkk8can83zpxq8qyy07gpv83hdw9vchfly5f264kanz405as283a00
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEVzdVRndFcXJ2Q3dQT0FB
+            ajJtUzhhT0I0WDBpMTFsWThkR0ZXVjFEMWdzCnc4bThpcUtrT0VpVDJ5RHNFZHE1
+            ZTdEeFdOam03d3ZiTkE5T050QTlVeUkKLS0tIDgyZSsyRHp2OFRYeVV4bDVsaW45
+            R3UybVJ5cjZRcHFxbW5qaStndTBwSzQKxkHLNZ1TdCX/YFWlw+2GMJINzMBb9gYS
+            l/qBOdjsJ3Yvn7YKh/OBlRxzYjMCp4aa+LPhrschpbJn+DZ4N9myfQ==
+            -----END AGE ENCRYPTED FILE-----
         - recipient: age1llp6k66265q3rzqemxpnq0x3562u20989vcjf65fl9s3hjhgcscq6mhnjw
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5dm5JU1lkNm9KVm9FTzNC
-            cXAvT0U0Zm1KcFQ4YVVacTVieGVIVTVrR0JrCkNOUTVGODFrWTJNWU5lQW9MZnhm
-            aythN3VKRllNKzZEYWJmb3pXVzlnSk0KLS0tIEdiK0RPWDZoeWhmUldmaG9pVDM1
-            ZG5xUURwQ3FRQ0xEa3RGTFE5VlhETkEKhMfYJcavJnrI3ruo811QfFpjqn914zwo
-            M8GqP7ggm9Q4Tje9RB9YX1SPWLz/6QXihSmTZmnniFK/4c1butmXyA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUTTNPTUdnQU5Ic2p6aTJj
+            c1NuUWN4Z3VJL2lWY1QwaUtVcUY1UGZiLzEwCmN3R3hHM0VtYmtieGlwaG5PeVlX
+            ZVBwNFlJa2dCVUt1VGVaZnk4clpmOEkKLS0tIHpEOUo5MXkrZjlsaS83Z2ZqUm0v
+            S1M4WVMzN3oremZuQlFZd2paRE51ZlUKHO0JeEw764gkORxNHrAPkY4bzJ/angBT
+            SvaZ+/CuMhG4BOAZjVuMDDUer10Leelqf5sAONCMpEfrzy756Wy/JA==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1zycwtk6dkxj6vuqhj9jw7932ythky9p3att6df4z9qasyw8v5dxquejcmp
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5aThZQlo4dU9MOURlWFVo
-            aGl5M3RDYkp1S29TejR4blVOa2NuakpoNXc0CnRjd1dGL1lkWlRaRmUzOGplTSts
-            cGcxMTRjWE8wNnRXc2JZSWRhRUpnZUkKLS0tIHF2ZFdocm45SklHUlNyR0MrK3dF
-            K0dIZFhabXg4bVB1dDBZZWs0TVRKV0kKDJv6PICh44aOe2CpanwYDbgzijl6TwAN
-            KYRFIv67XKjWk6NWZ+ndZ16ilAu2SSlgDwzLhaF1UBdV2iGwcMEeBw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWQ0E0ZG5mcGNSQThCcVdO
+            MWdYT0xiTm1CYzF3bzhGU0VGK1U0RUdocHhzCmdsVHovenRZbkNTL1hvd25iTUNo
+            UTVLRXAzekg0S2xPaXcyOXdRVXROYTgKLS0tIDlZSWdZNHhtMm55OU5pRFB0Uysv
+            MUFxc2lCTHhWWmhvbmppY0ZDSjhmdVEKZpoOFewklS46R2FNOjV+xxFVBYnzXt9G
+            GhOHWBx3qdoAUERr/ZGpP2uybOVU3kp9h7d6RnYLxIiSERpeaY4glg==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1t0ufylv5xfwhmcamu4gpwtay4wcuyqgzlkht4t04s9qjl8xjks9skxrt02
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkL2ljblRaY0h5NUF4R1Jy
-            ZVEzTFFDZVlDQVU5ajRRQXdYNTltMVVpelM0ClUvK3B0cHEvdGZDNTVRQkFBUGNH
-            UWRmc2s0LzdjKzdEd3phc2FMaWFSMjgKLS0tIENQTURpNy9LYkQwdEdUVUlaSm1a
-            UjdOcHZaRUZIZkZSM0Y2VDJUUEhEeWsKcIgvDZFJRwRtqXYgBoheQJMe9WF9rFIl
-            kdLCoiowmtry4I4wl2wwXTa1e/s1Gbkwdh88ZXqRO8xX7p4mD3OWlA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWMW1HTWRFV0V4VkVwcks5
+            L0JwVnF3dlNSTHRkMldPKzZjUlNpcHVYaWlFCkxORHRla0RtOWJVRjJNd2tuUHVP
+            VHplYWtVVjZDNHllbis2QkY3RUlScEEKLS0tIEN4M3pUdWxkYitGVXEvbFZjbjAy
+            eU1GbGxUQ3BRNGVmaXh3L3hRRTdiMlkKiJ8IvkrV3Au+3hO9fMOIDDic9GEFZeVF
+            SQpPhvmONgb46ZSlqj0oBIv9QAY6kqp/USrjC/Q0R9Ou9R0ys4Ar2w==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age15g5mhkcrseuxq923j7vdnmrzq4eh08ujha864k8hc6ncrj5sqfcsqkkyr2
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArRVYyRE1qZ0Myc3BZSlpx
-            NWZseEhZZjFJU3M3elBYUzlYazlKSXFGd2xjCjJZQWV4bzZSRWhSd29idHUyaExZ
-            RjVmMDQ4eGlnc083dzZiT2RBVjlJN0EKLS0tIHRRbDNhcUZ5K0tuWXA4c2pMYmRT
-            Q0RucWRURlFUMzd3UzFLcFVRMXN6QkkKBq2OV4H8Osc+x9SILMxu6XriUt5Fs+5Q
-            KlCouXgK0W0vk3WzCak9ZfFxGiUpGd00kzn39Ny/jslYARf+tqSwIg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlVVJibU5hNUJlL0JQZ1N0
+            V2loL0EvSVdjTUt5dkJhUVNmaC95SkdiS21ZCnU2ckRnZXY4TjRDVXVPT29LLzlx
+            MllDa3NJcmVRSGp0TzZJN2pBeVVEVDgKLS0tIENKNmFqNVBJQ3hmNXZDYTcyRTVY
+            U25IaXJyU2M1OXdHdldCQkxZT0RWRjAKVOPuyjCqQ+6HIvlKcufwYz41IZETJ+Yh
+            n1q6S+Wvdm8RbSclH5S9pcAdSy3qsgO1aHNuYouSvgWT0pBnt/05Bw==
             -----END AGE ENCRYPTED FILE-----
     lastmodified: "2024-08-06T22:08:26Z"
     mac: ENC[AES256_GCM,data:Bn1lO84SuS578s7zusm716C0tyry+zNW/ctA8ueMDDJq7MG0CHdJn8OocKYrp63S2I6Q10jz49rnEezgQV1eM79RYL2hFanG2hz2fJlW8Rio7nJ3IehA7xZbjNQWrviCl8I3rJBt0H1+S5817NTpbKwV1XBgGEsNKZmLX9M7IJA=,iv:nUvj0bwGqGnVdo8Mpf0am8YIhB+4lay/oMqUpX/IdAU=,tag:fxk/020uRW/VpsmoGyWT4A==,type:str]
