feat(workflow): push docker image on any branch
Motivation
----------
This should make it move convenient for us to deploy feature branches.

How to test
-----------
1. This branch should already trigger the workflow, there should be tags

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,8 +1,6 @@
-name: Deployment
+name: Push/Deploy
 
-on:
-  push:
-    branches: ['master']
+on: push
 
 jobs:
   build-and-push-images:
@@ -63,6 +61,7 @@ jobs:
 
   deploy-to-kubernetes:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
     needs: build-and-push-images
     steps:
       - uses: mdgreenwald/mozilla-sops-action@d9714e521cbaecdae64a89d2fdd576dd2aa97056 # v1.6.0
